<resources>
    <string name="app_name">Instagram</string>

    <!-- My Strings -->
    <string name="enter_email">Digite seu e-mail</string>
    <string name="enter_password">Digite sua senha</string>
    <string name="enter_name">Digite seu nome</string>

    <string name="text_button_login">Entrar</string>
    <string name="text_register">Cadastre-se</string>
    <string name="text_button_register">Cadastrar</string>

    <string name="some_empty_fields">Existem um ou mais campos vazios</string>

    <string name="menu_sair">Sair</string>

    <!-- Names icons Bottom Navigation -->
    <string name="menu_perfil">Perfil</string>
    <string name="menu_add_post">Postagem</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_button_edit_perfil">Editar perfil</string>
    <string name="text_publications">Publicações</string>
    <string name="text_followers">Seguidores</string>
    <string name="text_following">Seguindo</string>
    <string name="alter_photo">Alterar foto</string>
    <string name="save_alter">Salvar Alterações</string>

    <string name="follow">Seguir</string>
    <string name="following">Seguindo</string>
    <string name="loading">Carregando</string>

    <string name="open_gallery">Abrir galeria</string>
    <string name="open_camera">Abrir camera</string>

    <string name="filters">Filtros</string>
    <string name="to_post">Publicar</string>

    <string name="description">Descrição</string>
    <string name="comments">Comentários</string>
    <string name="enter_comments">Escreva um comentário</string>
</resources>